Fix post nav & social share scroll to position on mobile

--- a/wp-content/themes/chinapower/sass/base/_base.scss
+++ b/wp-content/themes/chinapower/sass/base/_base.scss
@@ -18,7 +18,7 @@ body {
 	&.overlay-isActive {
 		overflow-y: hidden;
 		position: relative;
-		height: 100vh;
+		height: 100%;
 	}
 }
 
