--- a/wp-content/themes/chinapower/sass/components/_social-share.scss
+++ b/wp-content/themes/chinapower/sass/components/_social-share.scss
@@ -90,7 +90,7 @@
 	margin: 0.5rem 0;
 
 	&.overlay-isActive {
-		position: fixed;
+		position: absolute;
 		background-color: $dark-blue;
 		opacity: 0.95;
 		height: 100%;
